--- a/_posts/0000-01-02-Sybil-777.md
+++ b/_posts/0000-01-02-Sybil-777.md
@@ -2,5 +2,5 @@
 layout: slide
 title: "Welcome to our second slide!"
 ---
-This is my Slide for Tech Up!
+This is my Slide for Tech Up! take 2
 Use the left arrow to go back!
